--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "app/class/Ucpaas.php"
         ],
         "psr-4": {
             "App\\": "app/"
